tests/paczka1/fuzzy1/46485575.err
Error in line 1: jHRM6PS A633 93,0
Error in line 2: jHRM6PS S512 97,6
Error in line 15: eErb1fNm S512 84,8
Error in line 13: G9hJ3OgL57k S340 85,6
Error in line 33: TokPPO S34a 93,7
Error in line 21: A633 S512 29,0
